Logo-Link auf Startseite
Das Logo ist nun ein Link auf die Startseite.

--- a/LogoLink.html
+++ b/LogoLink.html
@@ -143,7 +143,7 @@
 <body>
     <!-- Navigationsleiste -->
     <header class="navigationsleiste">
-        <div class="logo">Logo</div>
+        <a href="LogoLink.html" class="logo">Logo</a>
         <div class="suchleiste">
             <input type="text" placeholder="🔍 Suche eingeben...">
         </div>
@@ -165,7 +165,7 @@
 
         <!-- Produktkarten-Bereich -->
         <main class="produktbereich">
-            <a href="produkt1.html" class="produktkarte">
+            <a href="LogoLinkProdukt1.html" class="produktkarte">
                 <div class="bild-platzhalter"></div>
                 <div class="produkt-info">
                     <p class="produkt-titel">Produkt 1</p>
@@ -173,7 +173,7 @@
                     <p class="produkt-beschreibung">Ein großartiges Produkt.</p>
                 </div>
             </a>
-            <a href="produkt2.html" class="produktkarte">
+            <a href="LogoLinkProdukt2.html" class="produktkarte">
                 <div class="bild-platzhalter"></div>
                 <div class="produkt-info">
                     <p class="produkt-titel">Produkt 2</p>
