--- a/LogoLinkProdukt1.html
+++ b/LogoLinkProdukt1.html
@@ -104,7 +104,7 @@
 <body>
     <!-- Gleicher Header wie auf der Hauptseite -->
     <header class="navigationsleiste">
-        <div class="logo">Logo</div>
+        <a href="LogoLink.html" class="logo">Logo</a>
         <div class="suchleiste">
             <input type="text" placeholder="🔍 Suche eingeben...">
         </div>
