--- a/InstagramButton.html
+++ b/InstagramButton.html
@@ -144,9 +144,9 @@
             if (event.key === "Enter") {
                 const searchTerm = event.target.value.toLowerCase();
                 if (searchTerm.includes("produkt 1")) {
-                    window.location.href = "SuchleisteProdukt1.html";
+                    window.location.href = "InstagramButtonProdukt1.html";
                 } else if (searchTerm.includes("produkt 2")) {
-                    window.location.href = "SuchleisteProdukt2.html";
+                    window.location.href = "InstagramButtonProdukt2.html";
                 } else {
                     alert("Produkt nicht gefunden!");
                 }
@@ -157,7 +157,7 @@
 <body>
     <!-- Navigationsleiste -->
     <header class="navigationsleiste">
-        <a href="Suchleiste.html" class="logo">Logo</a>
+        <a href="InstagramButton.html" class="logo">Logo</a>
         <div class="suchleiste">
             <input type="text" placeholder="🔍 Suche eingeben..." onkeydown="handleSearch(event)">
         </div>
@@ -179,7 +179,7 @@
 
         <!-- Produktkarten-Bereich -->
         <main class="produktbereich">
-            <a href="SuchleisteProdukt1.html" class="produktkarte">
+            <a href="InstagramButtonProdukt1.html" class="produktkarte">
                 <div class="bild-platzhalter"></div>
                 <div class="produkt-info">
                     <p class="produkt-titel">Produkt 1</p>
@@ -187,7 +187,7 @@
                     <p class="produkt-beschreibung">Ein großartiges Produkt.</p>
                 </div>
             </a>
-            <a href="SuchleisteProdukt2.html" class="produktkarte">
+            <a href="InstagramButtonProdukt2.html" class="produktkarte">
                 <div class="bild-platzhalter"></div>
                 <div class="produkt-info">
                     <p class="produkt-titel">Produkt 2</p>
@@ -201,9 +201,9 @@
     <!-- Fußzeile -->
     <footer class="fusszeile">
         <div class="soziale-icons">
-            <span>📸</span>
-            <span>🐦</span>
-            <span>📘</span>
+            <a href="https://www.instagram.com/dhbwkarlsruhe/" target="_blank">📸</a>
+            <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://twitter.com/dhbw_karlsruhe&ved=2ahUKEwiqh5aIqMKJAxWV3QIHHfM6JfUQFnoECB8QAQ&usg=AOvVaw2PSJ6N5vn5L_BHyb978XOa" target="_blank">🐦</a>
+            <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.facebook.com/DHBWKarlsruhe/%3Flocale%3Dde_DE&ved=2ahUKEwjJntzZqMKJAxV6_7sIHQwDJigQFnoECBkQAQ&usg=AOvVaw0fHUL6nmdtThvt1ZFadl1e" target="_blank">📘</a>
         </div>
         <div class="hilfe-icon">
             <span>❓</span>
