--- a/LinkleisteLink1.html
+++ b/LinkleisteLink1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produktauswahl</title>
+    <title>Link 1 Seite</title>
     <style>
         * {
             margin: 0;
@@ -59,6 +59,7 @@
         .icons span {
             margin-left: 20px;
             font-size: 24px;
+            cursor: pointer;
         }
 
         .linkleiste {
@@ -144,9 +145,9 @@
             if (event.key === "Enter") {
                 const searchTerm = event.target.value.toLowerCase();
                 if (searchTerm.includes("produkt 1")) {
-                    window.location.href = "InstagramButtonProdukt1.html";
+                    window.location.href = "LinkleisteProdukt1.html";
                 } else if (searchTerm.includes("produkt 2")) {
-                    window.location.href = "InstagramButtonProdukt2.html";
+                    window.location.href = "LinkleisteProdukt2.html";
                 } else {
                     alert("Produkt nicht gefunden!");
                 }
@@ -157,44 +158,30 @@
 <body>
     <!-- Navigationsleiste -->
     <header class="navigationsleiste">
-        <a href="InstagramButton.html" class="logo">Logo</a>
+        <a href="Linkleiste.html" class="logo">Logo</a>
         <div class="suchleiste">
             <input type="text" placeholder="🔍 Suche eingeben..." onkeydown="handleSearch(event)">
         </div>
         <div class="icons">
             <span>❤️</span>
             <span>🛒</span>
-            <span>👤</span>
+            <span class="icon" onclick="location.href='BenutzerprofilSeite.html'">👤</span>
         </div>
     </header>
 
     <div class="inhalt">
-        <!-- Linkleiste -->
+        <!-- Linkleiste (Identisch zur Hauptseite) -->
         <nav class="linkleiste">
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
+            <a href="LinkleisteLink1.html">Link 1</a>
+            <a href="LinkleisteLink2.html">Link 2</a>
+            <a href="LinkleisteLink3.html">Link 3</a>
+            <a href="LinkleisteLink4.html">Link 4</a>
         </nav>
 
-        <!-- Produktkarten-Bereich -->
-        <main class="produktbereich">
-            <a href="InstagramButtonProdukt1.html" class="produktkarte">
-                <div class="bild-platzhalter"></div>
-                <div class="produkt-info">
-                    <p class="produkt-titel">Produkt 1</p>
-                    <p class="produkt-preis">€29,99</p>
-                    <p class="produkt-beschreibung">Ein großartiges Produkt.</p>
-                </div>
-            </a>
-            <a href="InstagramButtonProdukt2.html" class="produktkarte">
-                <div class="bild-platzhalter"></div>
-                <div class="produkt-info">
-                    <p class="produkt-titel">Produkt 2</p>
-                    <p class="produkt-preis">€49,99</p>
-                    <p class="produkt-beschreibung">Ein noch besseres Produkt.</p>
-                </div>
-            </a>
+        <!-- Inhalt spezifisch für diese Seite -->
+        <main style="padding: 20px;">
+            <h1>Willkommen auf Link 1 Seite</h1>
+            <p>Dies ist der Inhalt von Seite 1. Hier könnten Informationen, Produkte oder andere relevante Inhalte angezeigt werden.</p>
         </main>
     </div>
 
