--- a/LinkleisteLink1.html
+++ b/LinkleisteLink1.html
@@ -183,6 +183,26 @@
             <h1>Willkommen auf Link 1 Seite</h1>
             <p>Dies ist der Inhalt von Seite 1. Hier könnten Informationen, Produkte oder andere relevante Inhalte angezeigt werden.</p>
         </main>
+
+         <!-- Produktkarten-Bereich -->
+         <main class="produktbereich">
+            <a href="LinkleisteProdukt1.html" class="produktkarte">
+                <div class="bild-platzhalter"></div>
+                <div class="produkt-info">
+                    <p class="produkt-titel">Produkt 1</p>
+                    <p class="produkt-preis">€29,99</p>
+                    <p class="produkt-beschreibung">Ein großartiges Produkt.</p>
+                </div>
+            </a>
+            <a href="LinkleisteProdukt2.html" class="produktkarte">
+                <div class="bild-platzhalter"></div>
+                <div class="produkt-info">
+                    <p class="produkt-titel">Produkt 2</p>
+                    <p class="produkt-preis">€49,99</p>
+                    <p class="produkt-beschreibung">Ein noch besseres Produkt.</p>
+                </div>
+            </a>
+        </main>
     </div>
 
     <!-- Fußzeile -->
