--- a/Jeans.html
+++ b/Jeans.html
@@ -140,6 +140,7 @@
             color: #333;
             display: flex;
             flex-direction: column;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .produktkarte:hover {
