--- a/Favoriten.html
+++ b/Favoriten.html
@@ -260,17 +260,47 @@
         function handleSearch(event) {
             if (event.key === "Enter") {
                 const searchTerm = event.target.value.toLowerCase();
-                if (searchTerm.includes("skyhigh")) {
-                    window.location.href = "SkyhighHoodie.html";
-                } else if (searchTerm.includes("newyorkyankees")) {
-                    window.location.href = "NewyorkyankeesHoodie.html";
+                if (searchTerm.includes("dime")) {
+                    window.location.href = "Hoodie.html";
+                } else if (searchTerm.includes("asphaltgold")) {
+                    window.location.href = "Hoodie.html";
+                } else if (searchTerm.includes("skyhigh")) {
+                    window.location.href = "Hoodie.html";
+                } else if (searchTerm.includes("ny yankees")) {
+                    window.location.href = "Hoodie.html";
                 } else if (searchTerm.includes("hoodie")) {
                     window.location.href = "Hoodie.html";
+                } else if (searchTerm.includes("grey melange")) {
+                    window.location.href = "Pullover.html";
+                } else if (searchTerm.includes("harris")) {
+                    window.location.href = "Pullover.html";
+                } else if (searchTerm.includes("north face")) {
+                    window.location.href = "Pullover.html";
                 } else if (searchTerm.includes("pullover")) {
                     window.location.href = "Pullover.html";
+                } else if (searchTerm.includes("maverick")) {
+                    window.location.href = "Pullover.html";
+                } else if (searchTerm.includes("pullover")) {
+                    window.location.href = "Pullover.html";
+                } else if (searchTerm.includes("carhartt")) {
+                    window.location.href = "T-Shirt.html";
+                } else if (searchTerm.includes("by parra")) {
+                    window.location.href = "T-Shirt.html";
+                } else if (searchTerm.includes("patta")) {
+                    window.location.href = "T-Shirt.html";
+                } else if (searchTerm.includes("scuffers")) {
+                    window.location.href = "T-Shirt.html";
                 } else if (searchTerm.includes("t-shirt")) {
                     window.location.href = "T-Shirt.html";
+                } else if (searchTerm.includes("butter goods")) {
+                    window.location.href = "Jeans.html";
+                } else if (searchTerm.includes("daily paper")) {
+                    window.location.href = "Jeans.html";
+                } else if (searchTerm.includes("kani")) {
+                    window.location.href = "Jeans.html";
                 } else if (searchTerm.includes("jeans")) {
+                    window.location.href = "Jeans.html";
+                } else if (searchTerm.includes("levi")) {
                     window.location.href = "Jeans.html";
                 } else {
                     alert("Produkt nicht gefunden!");
